Fix Railway authentication and production verification flow